# api/docs/swagger.json
@@ -168,6 +168,59 @@
             }
         },
         "/v1/urls": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get url list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Url"
+                ],
+                "summary": "Get url list",
+                "operationId": "get_url_list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "GetUrlListResponse",
+                        "schema": {
+                            "$ref": "#/definitions/v1.GetUrlListResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Argument",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -219,7 +272,7 @@
                 }
             }
         },
-        "/v1/urls/{id}": {
+        "/v1/urls/by/{id}": {
             "get": {
                 "security": [
                     {
@@ -267,7 +320,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/v1/urls/{id}": {
             "put": {
                 "security": [
                     {
@@ -309,63 +364,6 @@
                         "description": "GetUrlResponseBody",
                         "schema": {
                             "$ref": "#/definitions/v1.GetUrlResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid Argument",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/urls/{user_id}": {
-            "get": {
-                "description": "Get url list",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Url"
-                ],
-                "summary": "Get url list",
-                "operationId": "get_url_list",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "page",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "user_id",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "GetUrlListResponse",
-                        "schema": {
-                            "$ref": "#/definitions/v1.GetUrlListResponse"
                         }
                     },
                     "400": {
@@ -576,7 +574,7 @@
                 }
             }
         },
-        "/v1/vpn/{short_url}": {
+        "/{short_url}": {
             "get": {
                 "security": [
                     {
@@ -882,7 +880,7 @@
                     "type": "string"
                 },
                 "expires_count": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "id": {
                     "type": "string"
